<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="logo_description">logo description</string>
    <string name="womens">WOMENS</string>
    <string name="mens">MENS</string>
    <string name="co_ed">CO-ED</string>
    <string name="next">NEXT</string>
    <string name="beginner">BEGINNER</string>
    <string name="finish">FINISH</string>
    <string name="baller">BALLER</string>
</resources>
