<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:scaleType="centerCrop" android:contentDescription="@string/background_image"/>

    <ImageView
            android:layout_width="88dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/logo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:contentDescription="@string/logo_description"/>
    <TextView
            android:text="I am a:"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/logo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textColor="@android:color/white" android:textSize="18sp"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="51dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5">
        <ToggleButton
                android:text="ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton4" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:textOff="@string/beginner" android:textOn="@string/beginner" tools:text="@string/beginner"
                android:layout_marginRight="16dp"/>
        <ToggleButton
                android:text="ToggleButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/toggleButton5" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/white"
                android:textOff="@string/baller" android:textOn="@string/baller" tools:text="@string/baller" android:layout_marginLeft="16dp"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/swoosh_button" android:textColor="@android:color/white"/>


</android.support.constraint.ConstraintLayout>